# MakeLocalPizzaRecipeAgent

./: .dockerignore  .editorconfig  .env.example  .env.production  .firebaserc  .gitignore  .gitleaks.toml  .prettierignore  .prettierrc  CLAUDE.md  Dockerfile  LICENSE  README.md  eslint.config.mjs  firebase.json  firestore.rules  instrumentation.ts  lefthook.yml  next.config.ts  package.json  pnpm-lock.yaml  storage.rules  tsconfig.json  vitest.config.rules.ts  vitest.config.ts
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  deploy.yml
.steering/20260513-initial-implementation/: design.md  requirements.md  tasklist.md
.steering/20260516-slice2-adk-gemini/: design.md  requirements.md  tasklist.md
.steering/20260517-slice3-detail-imagen/: design.md  requirements.md  tasklist.md
.steering/20260517-slice4-firestore-auth/: design-chat-transcript.md  design-request-prompt.md  design.md  requirements.md  tasklist.md
.steering/20260519-slice5-furusato/: design-request-prompt.md  design.md  requirements.md  tasklist.md
.steering/20260520-slice6-deploy/: design.md  requirements.md  tasklist.md
.steering/20260524-slice7-feedback/: claude-design-brief.md  design.md  requirements.md  tasklist.md
.steering/20260525-enro-equipment-guide/: claude-design-brief.md  design.md  requirements.md  tasklist.md
.steering/20260530-slice9-rate-limit/: design.md  requirements.md  tasklist.md
.steering/20260606-share-link/: design.md  requirements.md  tasklist.md
.steering/20260613-refactoring-foundation/: design.md  requirements.md  tasklist.md
agent/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
agent/data/: ingredients.yaml
agent/scripts/: refresh_furusato_cache.py
agent/src/makelocal_agent/: __init__.py  deps.py  main.py
agent/src/makelocal_agent/agents/: __init__.py  adk_client.py  candidates_agent.py  detail_agent.py  image_agent.py  imagen_client.py  orchestrator.py  parallel_stream.py  prompt.py  recipe_orchestrator.py
agent/src/makelocal_agent/data/: __init__.py  ingredients_repository.py
agent/src/makelocal_agent/domain/: __init__.py  candidate.py  furusato.py  ingredient.py  locale.py  oven_profile.py  recipe.py  stream.py
agent/src/makelocal_agent/furusato/: __init__.py  cache.py  normalize.py  rakuten_client.py  tool.py
agent/src/makelocal_agent/lib/: __init__.py  logging.py  ndjson.py  observability.py  settings.py  storage.py
agent/src/makelocal_agent/routes/: candidates.py  health.py  recipes.py  reroll.py  resolve.py
agent/tests/: test_candidates_agent.py  test_deps.py  test_detail_agent.py  test_detail_agent_prompt.py  test_domain_candidate.py  test_domain_furusato.py  test_domain_ingredient.py  test_domain_locale.py  test_domain_recipe.py  test_domain_stream.py  test_furusato_cache.py  test_furusato_normalize.py  test_furusato_tool.py  test_image_agent.py  test_imagen_client.py  test_ingredients_repository.py  test_lib_logging.py  test_lib_ndjson.py  test_lib_settings.py  test_lib_storage.py  test_orchestrator.py  test_oven_profile.py  test_prompt.py  test_rakuten_client.py  test_recipe_orchestrator.py  test_routes.py  test_routes_recipes.py  test_stream_contract.py
app/: apple-icon.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
app/_components/: HomeRedirector.tsx  TopClient.module.css  TopClient.test.tsx  TopClient.tsx
app/equipment/: page.module.css  page.tsx
app/ingredients/: page.tsx
app/journal/: page.tsx
app/local/: page.tsx
app/privacy/: page.tsx
design/: MakeLocalPizzaRecipe Prototype.html  MakeLocalPizzaRecipe.html  pizza-screens.jsx  pizza-tokens.jsx  prototype-app.jsx  slice4-screens.jsx  slice7-screens.html  slice7-screens.jsx  slice8-app.jsx  slice8-screens.html  slice8-screens.jsx
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  hackathon-reference.md  product-requirements.md  repository-structure.md
docs/hackathon/: QA.md  スケジュール.md  ルール.md  審査員.md  応募方法.md  賞金.md  開催概要.md
infra/: README.md
infra/cloudbuild/: deploy-agent.yaml  deploy-web.yaml
infra/terraform/: .terraform.lock.hcl  artifact_registry.tf  backend.tf  cloud_run_agent.tf  cloud_run_web.tf  iam.tf  main.tf  outputs.tf  providers.tf  secret_manager.tf  storage.tf  terraform.tfvars.example  variables.tf  workload_identity.tf
scripts/: build-ingredient-data.mjs  build-ingredient-data.ts  verify-oven-profile.sh
src/data/: ingredients.generated.json  prefectures.test.ts  prefectures.ts
src/domain/: candidate.test.ts  candidate.ts  feedback.test.ts  feedback.ts  furusato.test.ts  furusato.ts  ingredient.test.ts  ingredient.ts  locale.test.ts  locale.ts  oven-profile.ts  recipe.test.ts  recipe.ts  saved-recipe.ts  schemas.contract.test.ts  schemas.test.ts  schemas.ts  share.ts
src/hooks/: use-auth.test.tsx  use-auth.tsx  use-feedback-draft.test.tsx  use-feedback-draft.ts  use-feedback.test.tsx  use-feedback.ts  use-firestore-subscription.ts  use-furusato-items.test.tsx  use-furusato-items.ts  use-header-dropdown.test.tsx  use-header-dropdown.ts  use-locale.test.tsx  use-locale.ts  use-oven-profile.test.tsx  use-oven-profile.ts  use-quicktap-stream.test.tsx  use-quicktap-stream.ts  use-recipe-detail-stream.test.tsx  use-recipe-detail-stream.ts  use-saved-recipe.test.tsx  use-saved-recipe.ts  use-saved-recipes-journal.test.tsx  use-saved-recipes-journal.ts  use-saved-recipes.test.tsx  use-saved-recipes.ts  use-share.ts  use-toast.tsx  (+4 more)
(+253 files in other folders)
