[project]
name = "makelocal-agent"
version = "0.2.0"
description = "Make Local Pizza Recipe Agent — Python ADK + Vertex Gemini service"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    # FastAPI スタック
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.32.0",
    # Pydantic + Settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # YAML 読込 (agent/data/ingredients.yaml)
    "pyyaml>=6.0",
    # Google ADK + Vertex AI (Gemini 経由)
    "google-adk>=1.20.0",
    "google-cloud-aiplatform>=1.78.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/makelocal_agent"]

[tool.uv]
package = true

# ── Ruff ─────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W=pycodestyle, F=pyflakes, I=isort, UP=pyupgrade, B=bugbear,
# SIM=simplify, RUF=ruff-specific, ANN=missing annotations (一部)
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF", "PL", "PT", "C4"]
ignore = [
    "PLR0913", # too many args (Pydantic model 等で発生)
    "E501",    # line too long (format で対応)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"] # tests で magic value OK

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy ─────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_decorators = false # FastAPI/router decorator は untyped
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["google.adk.*", "vertexai.*", "google.cloud.aiplatform.*", "yaml"]
ignore_missing_imports = true

# ── pytest ───────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:google.*",
    "ignore::PendingDeprecationWarning",
]
