[project]
name = "makelocal-agent"
version = "0.7.0"
description = "Make Local Pizza Recipe Agent — Python ADK + Vertex Gemini service"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    # FastAPI スタック
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.32.0",
    # Pydantic + Settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # YAML 読込 (agent/data/ingredients.yaml)
    "pyyaml>=6.0",
    # Google ADK + Vertex AI (Gemini 経由)
    "google-adk>=1.20.0",
    "google-cloud-aiplatform>=1.78.0",
    # Slice 4: Firebase Storage (Emulator + 本番 GCS) に Imagen 画像を put
    "google-cloud-storage>=2.18.0",
    # Slice 5: ふるさと納税キャッシュを Firestore (Emulator + 本番) に書く
    "google-cloud-firestore>=2.18.0",
    # Slice 5: refresh CLI が .env を読む (Web の Next.js は dotenv-flow を介さない)
    "python-dotenv>=1.0.0",
    # Slice 6: OpenTelemetry + Cloud Trace export (Web 側と親子 span を繋ぐ)
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-gcp-trace>=1.7.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-propagator-gcp>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/makelocal_agent"]

[tool.uv]
package = true

# ── Ruff ─────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W=pycodestyle, F=pyflakes, I=isort, UP=pyupgrade, B=bugbear,
# SIM=simplify, RUF=ruff-specific, ANN=missing annotations (一部)
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF", "PL", "PT", "C4"]
ignore = [
    "PLR0913", # too many args (Pydantic model 等で発生)
    "E501",    # line too long (format で対応)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"] # tests で magic value OK

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy ─────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_decorators = false # FastAPI/router decorator は untyped
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "google.adk.*",
    "vertexai.*",
    # `google.cloud.*` を一括で ignore (firestore / storage / aiplatform はすべて
    # py.typed 未提供 or 型推論が CI と local で揺れる)
    "google.cloud.*",
    "yaml",
]
ignore_missing_imports = true

# ── pytest ───────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:google.*",
    "ignore::PendingDeprecationWarning",
]
